--- a/.github/workflows/weekly-acpp-llvm.yml
+++ b/.github/workflows/weekly-acpp-llvm.yml
@@ -55,7 +55,7 @@ jobs:
           ${{ github.job }}
     - name: clone LLVM
       run: |
-        git clone --recurse-submodules https://github.com/llvm/llvm-project --depth=1 -b release/${{matrix.clang_version}}.x llvm
+        git clone --recurse-submodules https://github.com/llvm/llvm-project --single-branch -b release/${{matrix.clang_version}}.x llvm
     - name: clone repository
       run: |
         git clone --recurse-submodules https://github.com/${FORK} -b ${BRANCH} AdaptiveCpp
