--- a/.github/workflows/weekly-acpp-llvm.yml
+++ b/.github/workflows/weekly-acpp-llvm.yml
@@ -28,6 +28,7 @@ jobs:
         rocm_version: ['5.6.1']
         cuda_or_rocm: ['cuda', 'rocm']
         os: ['ubuntu-20.04']
+      fail-fast: false
     steps:
     - uses: actions/checkout@v2
     - name: setup env
