--- a/.github/workflows/acpp-llvm-release-win.yml
+++ b/.github/workflows/acpp-llvm-release-win.yml
@@ -26,7 +26,7 @@ jobs:
         base_compiler: ['17']
         cuda: ['12.0']
         cuda_or_rocm: ['cuda']
-        os: ['ubuntu-20.04']
+        os: ['windows-2022']
       fail-fast: false
     steps:
     - uses: actions/checkout@v2
