--- a/.github/workflows/acpp-llvm-release-win.yml
+++ b/.github/workflows/acpp-llvm-release-win.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         clang_version: ['18']
-        base_compiler: ['17']
+        base_compiler: ['17.0']
         cuda: ['12.0']
         cuda_or_rocm: ['cuda']
         os: ['windows-2022']
@@ -45,7 +45,7 @@ jobs:
     - name: Install LLVM and Clang
       uses: KyleMayes/install-llvm-action@v2.0.5
       with:
-        version: "${{matrix.base_compiler}}.1"
+        version: "${{matrix.base_compiler}}"
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2
       with:
