--- a/.github/workflows/acpp-llvm-release-win.yml
+++ b/.github/workflows/acpp-llvm-release-win.yml
@@ -63,8 +63,9 @@ jobs:
       run: |
         git clone --recurse-submodules https://github.com/llvm/llvm-project --single-branch -b release/${{matrix.clang_version}}.x llvm
     - name: clone repository
+      shell: powershell
       run: |
-        git clone --recurse-submodules https://github.com/${FORK} -b ${BRANCH} AdaptiveCpp
+        git clone --recurse-submodules https://github.com/$env:FORK -b $env:BRANCH AdaptiveCpp
     - name: cuda-toolkit
       uses: Jimver/cuda-toolkit@v0.2.19
       with:
