Revert to powershell but use quotes around env expansion

--- a/.github/workflows/acpp-llvm-release-win.yml
+++ b/.github/workflows/acpp-llvm-release-win.yml
@@ -98,47 +98,65 @@ jobs:
         .\b2.exe --with-context --with-fiber --with-atomic --with-filesystem --with-test toolset=clang-win address-model=64 variant=release --build-type=complete install --prefix=$env:GITHUB_WORKSPACE/install
 
     - name: build Adaptive Cpp
-      shell: cmd
+      shell: powershell
       run: |
-        set PATH = "%LLVM_PATH%\bin;%PATH%"
-        set CC = "clang-cl"
-        set CXX = "clang-cl"
+        $env:PATH = "$env:LLVM_PATH\bin;$env:PATH"
+        $env:CC = "clang-cl"
+        $env:CXX = "clang-cl"
 
-        cd %GITHUB_WORKSPACE%
+        cd $env:GITHUB_WORKSPACE
         md build
         cd build
 
-        cmake ../llvm/llvm -GNinja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=%GITHUB_WORKSPACE%/install -DLLVM_TARGETS_TO_BUILD="X86;NVPTX" -DLLVM_ENABLE_PROJECTS="clang;openmp;lld;compiler-rt" -DLLVM_PARALLEL_LINK_JOBS=1 -DLLVM_EXTERNAL_PROJECTS=AdaptiveCpp -DLLVM_EXTERNAL_ADAPTIVECPP_SOURCE_DIR=%GITHUB_WORKSPACE%/AdaptiveCpp -DLLVM_ADAPTIVECPP_LINK_INTO_TOOLS=ON -DWITH_OPENCL_BACKEND=OFF -DBoost_DIR=%GITHUB_WORKSPACE%\lib\cmake\Boost-1.83.0 -DLLVM_TOOL_BUGPOINT_BUILD=OFF -DOPENMP_ENABLE_LIBOMPTARGET=OFF -DLLVM_INCLUDE_TESTS=OFF -DCMAKE_C_COMPILER_LAUNCHER=sccache -DCMAKE_CXX_COMPILER_LAUNCHER=sccache
+        cmake "$env:GITHUB_WORKSPACE/llvm/llvm" -GNinja `
+          -DCMAKE_BUILD_TYPE=Release `
+          -DCMAKE_INSTALL_PREFIX="$env:GITHUB_WORKSPACE/install" `
+          -DLLVM_TARGETS_TO_BUILD="X86;NVPTX" `
+          -DLLVM_ENABLE_PROJECTS="clang;openmp;lld;compiler-rt" `
+          -DLLVM_PARALLEL_LINK_JOBS=1 `
+          -DLLVM_EXTERNAL_PROJECTS=AdaptiveCpp `
+          -DLLVM_EXTERNAL_ADAPTIVECPP_SOURCE_DIR="$env:GITHUB_WORKSPACE/AdaptiveCpp" `
+          -DLLVM_ADAPTIVECPP_LINK_INTO_TOOLS=ON `
+          -DWITH_OPENCL_BACKEND=OFF `
+          -DBoost_DIR="$env:GITHUB_WORKSPACE\lib\cmake\Boost-1.83.0" `
+          -DLLVM_TOOL_BUGPOINT_BUILD=OFF `
+          -DOPENMP_ENABLE_LIBOMPTARGET=OFF `
+          -DLLVM_INCLUDE_TESTS=OFF `
+          -DCMAKE_C_COMPILER_LAUNCHER=sccache `
+          -DCMAKE_CXX_COMPILER_LAUNCHER=sccache
 
         ninja -j2 install
 
-        echo "CC=clang" >> %GITHUB_ENV%
-        echo "CXX=clang++" >> %GITHUB_ENV%
-        echo "PATH=%GITHUB_WORKSPACE%/install/bin:%PATH%" >> %GITHUB_ENV%
+        echo "CC=clang" >> $env:GITHUB_ENV
+        echo "CXX=clang++" >> $env:GITHUB_ENV
+        echo "PATH=$env:GITHUB_WORKSPACE/install/bin:$env:PATH" >> $env:GITHUB_ENV
     - name: build CPU tests
-      shell: cmd
+      shell: powershell
       run: |
-        md %GITHUB_WORKSPACE%/build/tests-cpu
-        cd %GITHUB_WORKSPACE%/build/tests-cpu
-        cmake -GNinja -DACPP_TARGETS="omp" -DAdaptiveCpp_DIR=%GITHUB_WORKSPACE%/install/lib/cmake/AdaptiveCpp %GITHUB_WORKSPACE%/AdaptiveCpp/tests -DLLVM_DIR=%GITHUB_WORKSPACE%/install/lib/cmake/llvm
+        md $env:GITHUB_WORKSPACE/build/tests-cpu
+        cd $env:GITHUB_WORKSPACE/build/tests-cpu
+        cmake -GNinja -DACPP_TARGETS="omp" `
+          -DAdaptiveCpp_DIR="$env:GITHUB_WORKSPACE}/install/lib/cmake/AdaptiveCpp" `
+          "$env:GITHUB_WORKSPACE/AdaptiveCpp/tests" `
+          -DLLVM_DIR="$env:GITHUB_WORKSPACE/install/lib/cmake/llvm"
         ninja -j2
     - name: build generic SSCP tests
       if: matrix.clang_version >= 14
-      shell: cmd
       run: |
-        md %GITHUB_WORKSPACE%/build/tests-sscp
-        cd %GITHUB_WORKSPACE%/build/tests-sscp
-        cmake -GNinja -DACPP_TARGETS="generic" -DAdaptiveCpp_DIR=%GITHUB_WORKSPACE%/install/lib/cmake/AdaptiveCpp %GITHUB_WORKSPACE%/AdaptiveCpp/tests -DLLVM_DIR=%GITHUB_WORKSPACE%/install/lib/cmake/llvm
+        md $env:GITHUB_WORKSPACE/build/tests-sscp
+        cd $env:GITHUB_WORKSPACE/build/tests-sscp
+        cmake -GNinja -DACPP_TARGETS="generic" `
+          -DAdaptiveCpp_DIR="$env:GITHUB_WORKSPACE}/install/lib/cmake/AdaptiveCpp" `
+          "$env:GITHUB_WORKSPACE/AdaptiveCpp/tests" `
+          -DLLVM_DIR="$env:GITHUB_WORKSPACE/install/lib/cmake/llvm"
         ninja -j2
     - name: run CPU tests
-      shell: cmd
       run: |
-        cd %GITHUB_WORKSPACE%/build/tests-cpu
+        cd $env:GITHUB_WORKSPACE/build/tests-cpu
         ./sycl_tests
     - name: run SSCP CPU tests
-      shell: cmd
       run: |
-        cd %GITHUB_WORKSPACE%/build/tests-sscp
+        cd $env:GITHUB_WORKSPACE/build/tests-sscp
         ./sycl_tests
     - uses: actions/upload-artifact@v4
       with:
