--- a/.github/workflows/acpp-llvm-release-win.yml
+++ b/.github/workflows/acpp-llvm-release-win.yml
@@ -90,8 +90,8 @@ jobs:
         $env:CC = "clang-cl"
         $env:CXX = "clang-cl"
 
-        $user-config = "using clang-win : : sccache.exe clang-cl.exe ;"
-        $user-config > "$env:USERPROFILE\user-config.jam"
+        $userconfig = "using clang-win : : sccache.exe clang-cl.exe ;"
+        $userconfig > "$env:USERPROFILE\user-config.jam"
 
         $boostURL = "https://boostorg.jfrog.io/artifactory/main/release/1.83.0/source/boost_1_83_0.7z"
         $boostFolderName = $boostUrl.Split("/")[-1].Split(".")[0]
