--- a/.github/workflows/acpp-llvm-release-win.yml
+++ b/.github/workflows/acpp-llvm-release-win.yml
@@ -92,7 +92,7 @@ jobs:
 
         "using clang-win : : sccache.exe clang-cl.exe ;" | Out-File -FilePath "$env:USERPROFILE\user-config.jam"
 
-        $boostURL = "https://boostorg.jfrog.io/artifactory/main/release/1.83.0/source/boost_1_83_0.7z"
+        $boostURL = "https://archives.boost.io/release/1.83.0/source/boost_1_83_0.7z"
         $boostFolderName = $boostUrl.Split("/")[-1].Split(".")[0]
         Invoke-WebRequest $boostURL -OutFile boost.7z
         7z.exe x boost.7z
